# walang

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements.txt
cmake-modules/: CodeCoverage.cmake
example/: example.wa
g4/: CMakeLists.txt  walang.g4
src/: CMakeLists.txt  compiler.cpp  compiler.hpp  main.cpp  parser.cpp  parser.hpp  resolver.cpp  resolver.hpp  symbol_table.cpp  symbol_table.hpp  variant_type_table.cpp  variant_type_table.hpp
src/ast/: assign_statement.cpp  binary_expression.cpp  block_statement.cpp  call_expression.cpp  class_statement.cpp  declare_statement.cpp  expression.hpp  expression_statement.cpp  file.cpp  file.hpp  function_statement.cpp  identifier.cpp  if_statement.cpp  member_expression.cpp  node.hpp  op.cpp  op.hpp  prefix_expression.cpp  return_statement.cpp  statement.hpp  ternary_expression.cpp  while_statement.cpp
src/binaryen/: enum.hpp  utils.hpp
src/cli/: CMakeLists.txt  main.cpp
src/helper/: diagnose.cpp  diagnose.hpp  overload.hpp  range.cpp  range.hpp  redefined_checker.hpp
src/ir/: class.cpp  function.cpp  function.hpp  global.cpp  local.cpp  memory_data.cpp  signature.cpp  stack_data.cpp  variant.cpp  variant.hpp  variant_type.cpp  variant_type.hpp
tests/: CMakeLists.txt
tests/compile/: basisStatement.cpp  basisStatement.xml  call.cpp  call.xml  class.cpp  class.xml  compile_basis_statement.snapshot  compile_basis_statement.snapshot.xml  compile_if_statement.snapshot  compile_if_statement.snapshot.xml  compile_while_statement.snapshot  compile_while_statement.snapshot.xml  functionStatement.cpp  functionStatement.xml  ifStatement.cpp  ifStatement.xml  variant_scope.cpp  variant_scope.xml  whileStatement.cpp  whileStatement.xml
tests/helper/: snapshot.hpp
tests/parse/: basisStatement.cpp  binaryExpression.cpp  class.cpp  flowStatement.cpp  memberExpression.cpp  prefixExpression.cpp  ternaryExpression.cpp
tests/parser/: basisStatement.cpp  binaryExpression.cpp  callExpression.cpp  flowStatement.cpp  function.cpp  ifStatement.cpp  prefixExpression.cpp  ternaryExpression.cpp
